--- a/settings.html
+++ b/settings.html
@@ -25,6 +25,6 @@
   <br>Version also must be compatable
 </p>
 
-<a href="#"><button class="button3">Download App Client</button></a>
+<a href="https://github.com/yaktenz/DevToolPanel"><button class="button3">Download App Client</button></a>
 
 </body>
