--- a/settings.html
+++ b/settings.html
@@ -15,7 +15,7 @@
 
 <h1 class="bigblue">Settings</h1>
 <h1>App Version</h1>
-<p>V1.1.0, Developed by Mayonaise</p>
+<p>V1.2.0, Developed by Mayonaise</p>
 
 <h1>Our Mission</h1>
 <p>To help people get a website done with no dayum bs (Just make sure you can sorta code or most of it wont make sense)</p>
@@ -25,6 +25,7 @@
   <br>Version also must be compatable
 </p>
 
-<a href="https://github.com/yaktenz/DevToolPanel"><button class="button3">Download App Client</button></a>
+<a href="https://github.com/yaktenz/DevToolPanel"><button class="button3">Download App Client</button></a><br>
+<a href="https://yaktenz.github.io/DevToolPanel/"><button class="button3">Switch to Web Browser</button></a>
 
 </body>
