--- a/generator.html
+++ b/generator.html
@@ -69,6 +69,7 @@
     <div id="navbar">
   <a href="index.html">Dashboard</a>
   <a class="active" href="generator.html">Gdrive Generator</a>
+      <a href="imported.html">Imported</a>
   <a href="https://sites.google.com/view/mayonaise/browse">Website</a>
   <a href="settings.html">Settings</a>
 </div>
