--- a/imported.html
+++ b/imported.html
@@ -67,37 +67,16 @@
     </script>
 
     <div id="navbar">
-  <a class="active" href="index.html">Dashboard</a>
+  <a  href="index.html">Dashboard</a>
   <a href="generator.html">Gdrive Generator</a>
-      <a href="imported.html">Imported</a>
+      <a class="active" href="imported.html">Imported</a>
   <a href="https://sites.google.com/view/mayonaise/browse">Website</a>
   <a href="settings.html">Settings</a>
 </div>
 
-<h1 class="bigblue">DevTool Panel</h1>
+<h1 class="bigblue">DevTool Panel - Imported</h1>
 <h1>Dashboard</h1>
 
-<a href="generator.html"><button class="button2">Gdrive Direct Link Generator</button></a>
-<a href="softwares.html"><button class="button2">Coding Softwares</button></a>
-<a href="freewebhost.html"><button class="button2">Free Website Hosting</button></a>
-<a href="filehosts.html"><button class="button2">Free File Hosting</button></a>
-<br><br>
-
-
-<p>Video Player Sites</p>
-<a href="https://youtube.com/"><button class="button2">YouTube</button></a>
-
-<p>Community</p>
-<a href="https://discord.com/"><button class="button2">Discord</button></a>
-
-<p>Shorten URLs</p>
-<a href="https://tinyurl.com/"><button class="button2">Tinyurl</button></a>
-<a href="https://bit.ly/"><button class="button2">Bit.ly</button></a>
-<a href="https://rebrandly.com/"><button class="button2">rebrand.ly</button></a>
-
-<p>AUDIO</p>
-
-<a href="https://www.fxsound.com/"><button class="button2">FXSound - Audio Eq For PC</button></a>
-<a href="https://cdn.discordapp.com/attachments/1388270982036459650/1388271126098088108/VoiceMod.zip?ex=686ce5fd&is=686b947d&hm=671905e5a0304c3e7c268d4931fee63bfbec0a9b1d813616c59daf57e6d1651e&"><button class="button2">VoiceMod - Clear Microphone</button></a>
-
+<a href="app/RyzenCheats/V.1.11.1/index.html"><button class="button2">RyzenCheats For FiveM (V1.11.1)</button></a>
+<a href="generator.html"><button class="button2">Gdrive Generator (Automatic)</button></a>
 </body>
