--- a/freewebhost.html
+++ b/freewebhost.html
@@ -9,6 +9,7 @@
     <div id="navbar">
   <a href="index.html">Dashboard</a>
   <a href="generator.html">Gdrive Generator</a>
+      <a href="imported.html">Imported</a>
   <a href="https://sites.google.com/view/mayonaise/browse">Website</a>
   <a href="settings.html">Settings</a>
 </div>
