--- a/settings.html
+++ b/settings.html
@@ -9,6 +9,7 @@
     <div id="navbar">
   <a href="index.html">Dashboard</a>
   <a href="generator.html">Gdrive Generator</a>
+      <a href="imported.html">Imported</a>
   <a href="https://sites.google.com/view/mayonaise/browse">Website</a>
   <a class="active" href="settings.html">Settings</a>
 </div>
@@ -25,7 +26,7 @@
   <br>Version also must be compatable
 </p>
 
-<a href="https://github.com/yaktenz/DevToolPanel"><button class="button3">Download App Client</button></a><br>
+<a href="https://github.com/yaktenz/DevToolPanel"><button class="button3">Download App Client</button></a>
 <a href="https://yaktenz.github.io/DevToolPanel/"><button class="button3">Switch to Web Browser</button></a>
 
 </body>
