--- a/settings.html
+++ b/settings.html
@@ -16,7 +16,7 @@
 
 <h1 class="bigblue">Settings</h1>
 <h1>App Version</h1>
-<p>V1.2.0, Developed by Mayonaise</p>
+<p>V1.2.1, Developed by Mayonaise</p>
 
 <h1>Our Mission</h1>
 <p>To help people get a website done with no dayum bs (Just make sure you can sorta code or most of it wont make sense)</p>
@@ -28,5 +28,6 @@
 
 <a href="https://github.com/yaktenz/DevToolPanel"><button class="button3">Download App Client</button></a>
 <a href="https://yaktenz.github.io/DevToolPanel/"><button class="button3">Switch to Web Browser</button></a>
+<a href="import-guide.txt"><button class="button3">Import Guide</button></a>
 
 </body>
