--- a/settings.html
+++ b/settings.html
@@ -29,5 +29,6 @@
 <a href="https://github.com/yaktenz/DevToolPanel"><button class="button3">Download App Client</button></a>
 <a href="https://yaktenz.github.io/DevToolPanel/"><button class="button3">Switch to Web Browser</button></a>
 <a href="import-guide.txt"><button class="button3">Import Guide</button></a>
+<a href="https://sites.google.com/view/mayonaise/devtool-panel/import-store"><button class="button3">Import Store</button></a>
 
 </body>
