--- a/imported.html
+++ b/imported.html
@@ -67,7 +67,7 @@
     </script>
 
     <div id="navbar">
-  <a  href="index.html">Dashboard</a>
+  <a  href="index.html">Imported Library</a>
   <a href="generator.html">Gdrive Generator</a>
       <a class="active" href="imported.html">Imported</a>
   <a href="https://sites.google.com/view/mayonaise/browse">Website</a>
