--- a/imported.html
+++ b/imported.html
@@ -67,7 +67,7 @@
     </script>
 
     <div id="navbar">
-  <a  href="index.html">Imported Library</a>
+  <a  href="index.html">Dashboard</a>
   <a href="generator.html">Gdrive Generator</a>
       <a class="active" href="imported.html">Imported</a>
   <a href="https://sites.google.com/view/mayonaise/browse">Website</a>
@@ -75,7 +75,7 @@
 </div>
 
 <h1 class="bigblue">DevTool Panel - Imported</h1>
-<h1>Dashboard</h1>
+<h1>Imported Library</h1>
 
 <a href="app/RyzenCheats/V.1.11.1/index.html"><button class="button2">RyzenCheats For FiveM (V1.11.1)</button></a>
 <a href="generator.html"><button class="button2">Gdrive Generator (Automatic)</button></a>
