--- a/settings.html
+++ b/settings.html
@@ -2,6 +2,7 @@
 <head>
   <link rel="icon" type="image/x-icon" href="assets/favicon.png">
   <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -16,7 +17,7 @@
 
 <h1 class="bigblue">Settings</h1>
 <h1>App Version</h1>
-<p>V1.2.1, Developed by Mayonaise</p>
+<p>V1.3.1, Developed by Mayonaise</p>
 
 <h1>Our Mission</h1>
 <p>To help people get a website done with no dayum bs (Just make sure you can sorta code or most of it wont make sense)</p>
