--- a/imported.html
+++ b/imported.html
@@ -2,6 +2,7 @@
 <head>
   <link rel="icon" type="image/x-icon" href="assets/favicon.png">
   <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -79,4 +80,5 @@
 
 <a href="app/RyzenCheats/V.1.11.1/index.html"><button class="button2">RyzenCheats For FiveM (V1.11.1)</button></a>
 <a href="generator.html"><button class="button2">Gdrive Generator (Automatic)</button></a>
+<a href="app/SquareFlapper/index.html"><button class="button2">SquareFlapper (ALL VERSIONS)</button></a>
 </body>
