--- a/softwares.html
+++ b/softwares.html
@@ -2,6 +2,7 @@
 <head>
   <link rel="icon" type="image/x-icon" href="assets/favicon.png">
   <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
