--- a/imported.html
+++ b/imported.html
@@ -81,4 +81,5 @@
 <a href="app/RyzenCheats/V.1.11.1/index.html"><button class="button2">RyzenCheats For FiveM (V1.11.1)</button></a>
 <a href="generator.html"><button class="button2">Gdrive Generator (Automatic)</button></a>
 <a href="app/SquareFlapper/index.html"><button class="button2">SquareFlapper (ALL VERSIONS)</button></a>
+<a href="app/MusicPlayer/index.html"><button class="button2">MusicPlayer For DevTool (ALL VERSIONS)</button></a>
 </body>
