--- a/imported.html
+++ b/imported.html
@@ -82,4 +82,5 @@
 <a href="generator.html"><button class="button2">Gdrive Generator (Automatic)</button></a>
 <a href="app/SquareFlapper/index.html"><button class="button2">SquareFlapper (ALL VERSIONS)</button></a>
 <a href="app/MusicPlayer/index.html"><button class="button2">MusicPlayer For DevTool (ALL VERSIONS)</button></a>
+<a href="app/HideX/index.html"><button class="button2">HideX - File Explorer</button></a>
 </body>
