--- a/imported.html
+++ b/imported.html
@@ -23,5 +23,7 @@
 <a href="generator.html"><button class="button2">Gdrive Generator (Automatic)</button></a>
 <a href="app/SquareFlapper/index.html"><button class="button2">SquareFlapper (ALL VERSIONS)</button></a>
 <a href="app/MusicPlayer/index.html"><button class="button2">MusicPlayer For DevTool (ALL VERSIONS)</button></a>
-<a href="app/HideX/index.html"><button class="button2">HideX - File Explorer</button></a><br><br>
+<a href="app/HideX/index.html"><button class="button2">HideX - File Explorer</button></a><br><br><br>
+
+<a href="https://sites.google.com/view/mayonaise/devtool-panel/import-store">Download Import Apps</a>
 </body>
